changed 'while' to 'whilst' in 2nd about paragraph

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             how the web works sprung to life.
           </p>
           <p>
-            In my free time while working as a transport planner I started to
+            In my free time whilst working as a transport planner I started to
             teach myself using free resources online such as freeCodeCamp. I was
             really enjoying it but I could not see a solid career path and how
             to move forward to get a foothold in the industry.
